exports[`BpkSelect should render correctly 1`] = `
<select
  aria-invalid={false}
  className="bpk-select"
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value="oranges">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "className" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select test"
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value="oranges">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "docked" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select bpk-select--docked"
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value="">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "dockedFirst" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select bpk-select--docked-first"
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value="">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "dockedLast" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select bpk-select--docked-last"
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value="">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "dockedMiddle" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select bpk-select--docked-middle"
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value="">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "large" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select bpk-select--large"
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value="">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with a "valid" attribute equal to false 1`] = `
<select
  aria-invalid={true}
  className="bpk-select bpk-select--invalid"
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value="oranges">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;
